0.51
        New "summary" metadata field for one-line summaries of nodes.
        Add "summary" field to RDF as dc:description.
        Show node summary in search results.
        Add "address" field that had got missed out from the RDF.
        Fix bug that was breaking coordinate entry fields on search page if lat/lon
          was being used.
        Replace underscores in node names in redirection message with spaces.
        Redirection message now links to a rendered version of the old page
         rather than the editing view.
         
0.50    2 October 2005
        Remove rogue ampersand that had crept into the RSS feed.
        
0.49    24 July 2005
        Add updated prerequisite on CGI::Wiki::Plugin::RSS::ModWiki (fixes
        a test failure)

0.48    24 July 2005
        RDF enhancements:
          Removed redundant "id" parameter specification from dc:source in
            rdf:Description in RDF node listings.
          Fixed bug that was causing all nodes to be flagged as a
            geo:SpatialThing whether they were or not.
          Ensured that ampersands and greater/less than symbols were properly 
            escaped so as not to be XML-toxic.
          Added geo:lat, geo:long and RSS link attributes to items in 
            category/locale listings to facilitate integration with mapping
            applications.
          Added owl:sameAs property to RDF output for nodes that are redirects
            to other nodes.
          RSS feed now has correct timestamp (matching most recent item) and
            matching Last-Modified HTTP header.
        Reorder navigation bar to provide more logical groupings.
        Add "format=plain" option for all-nodes index listing and associated
          template plain_index.tt.
        New message to appear on pages when you have been redirected
          informing you of the fact.
        Stop showing potentially very long map URLs in metadata section of
          node display.